--- a/Design/start.css
+++ b/Design/start.css
@@ -1,9 +1,35 @@
-body {background-image: url("images/Hintergrund.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: 50% 30%;}
-a {color: black;}
-a:hover {color: lightgray;}
-.container-fluid {background-color: white;}
-#introduction {position:relative; 
-               left: 40%;}
+header.masthead{
+    width: 100%;
+    height: 700px;
+ 
+    background-image: url("images/Hintergrund1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: 50% 30%;
+}
+
+#intro-text{
+	text-align: center;
+	position: relative;
+	top: 230px;	
+}
+
+#demo{
+		height: 700px;
+	
+	
+}
+	
+h2{
+		font-size: 50px;
+}
+a {
+    color: black;
+}
+a:hover {
+    color: lightgray;
+}
+.container-fluid {
+    background-color: white;
+}
