--- a/Design/start.css
+++ b/Design/start.css
@@ -19,6 +19,7 @@ header.masthead{
 #demo{
         text-align: center;
 		height: 700px;	
+        margin-top: 4%;
 }
 
 	
@@ -47,4 +48,22 @@ a {
 .navbar-brand:hover, .navbar-brand:visited {
     color: black;
     cursor: default;
+}
+
+#frameElement {
+    margin-left: 5%;
+    margin-bottom: 5%;
+    width: 90%;
+    height: 100%;
+    background-image: url("images/Demo-Anzeige.png");
+    background-size: cover;
+}
+
+#demoElement {
+    background-color: deeppink;
+    margin-left: 0.5%;
+    position: relative;
+    top: 135px;
+    width: 99%;
+    height: 80%;
 }
