--- a/Design/startpage/start.css
+++ b/Design/startpage/start.css
@@ -2,7 +2,7 @@ header.masthead{
     width: 100%;
     height: 700px;
  
-    background-image: url("images/Hintergrund1.jpg");
+    background-image: url("../images/Hintergrund1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -55,7 +55,7 @@ a {
     margin-bottom: 5%;
     width: 90%;
     height: 100%;
-    background-image: url("images/Demo-Anzeige.png");
+    background-image: url("../images/Demo-Anzeige.png");
     background-size: cover;
 }
 
