--- a/Design/mainpage/main.css
+++ b/Design/mainpage/main.css
@@ -39,8 +39,29 @@ a {
     margin-left: 52%;
 }
 
+#highTemp, #lowTemp, #arrival, #departure, #cloudCover, #windSpeed, #precipitation{
+    display: inline;    
+}
+
+#vacationData{
+    float:left;
+    margin-left: 20%;
+    margin-top: 0%;
+    font-size: 14pt;   
+}
+
+#temperature{
+    margin-top: 0%;
+    margin-left: 3%;  
+    float:left;
+    font-size:14pt;
+}
+
+h4{
+    font-weight: bold;
+}
+
 #mainDiv {
-    border: 1px solid black;
     width: 80%;
     height: 700px;
     float: right;
@@ -49,17 +70,61 @@ a {
     margin-bottom: 3%;
 }
 
-#weather, #hiddenElement{
-    width: 100%;
-    height: 150px;
+#cloudCoverImage, #windSpeedImage, #precipImage{
+    float:left;   
 }
+
+#additionalWeather{
+ margin-top: 2%; 
+}
+
+#cloudElements, #windSpeedElements, #precipElements {
+    float:left;
+    margin-top: 1%;
+    margin-left: 1.5%;
+}
+
+#precipTypes {
+    clear:both;
+    float:left;
+    margin-top: 2%;
+    margin-left: 1%;
+}
+
+#windSpeedImage, #precipImage{
+    margin-left:7%;
+}
+
+#weather, #hiddenElement{
+   margin-left: 10%;
+    width: 90%;
+    height: 170px;
+}
+
 #hiddenElement{
+    margin-top: 3%;
     display: none;   
 }
 
 #arrowDown, #arrowUp{    
-    margin-left: 50%;
+    margin-left: 44%;
+    margin-bottom: 1%;
+    clear:both;
+    float:left;
 } 
+#place{
+    margin-left: 1%;
+    margin-top: 1%;
+    font-size: 16pt;
+    float:left;
+}
+
+#weatherIcon{
+    clear:both;
+    float:left;
+    margin-left: 3%;
+    margin-top: 0%;
+}
 
 #weatherItems, #defaultItems {
     border: 1px solid black;
