--- a/Design/mainpage/main.css
+++ b/Design/mainpage/main.css
@@ -18,10 +18,23 @@ a {
     
 }
 
-#editVacation {
-    clear: both;
+
+#addVacation{
+    position:relative;
+    bottom: 20%;
+    right: 4%;
     float:right;
-    margin-bottom: 30%;
+}
+
+#vacationButtons{
+    margin-right: 5%;
+    width:10%;
+    float:right;
+}
+
+#deleteVacation{
+    margin-top: 8%;
+    
 }
 
 .sidenav {
@@ -70,9 +83,19 @@ h4{
     font-weight: bold;
 }
 
+#universalItem{
+    float:left; 
+    margin-left: 40%;
+    margin-bottom: 5%;
+}
+#addItem{
+    float:right;
+    margin-right: 5%;
+    margin-top: 2%;
+}
+
 #mainDiv {
     width: 80%;
-    height: 700px;
     float: right;
     margin-top: 2%;
     margin-right: 2%;
@@ -108,8 +131,16 @@ h4{
    margin-left: 10%;
     width: 90%;
     height: 170px;
-    background-color: red;
 }
+
+.table.table-bordered{
+    margin-top: 5%;
+    margin-left: 4%;
+    margin-right: 4%;
+    width: 92%;
+}
+
+
 
 #hiddenElement{
     margin-top: 3%;
@@ -118,6 +149,7 @@ h4{
 
 #arrowDown, #arrowUp{    
     margin-left: 44%;
+    margin-top: 4%;
     margin-bottom: 1%;
     clear:both;
     float:left;
@@ -137,9 +169,10 @@ h4{
 }
 
 #weatherItems, #defaultItems {
-    border: 1px solid black;
+    
+    margin-top: 5%;
     width: 50%;
-    height: 550px; 
+    text-align: center;
 }
 
 #defaultItems {
