--- a/Design/profilepage/profilepage.css
+++ b/Design/profilepage/profilepage.css
@@ -16,3 +16,12 @@ a {
     left: 600px;
     
 }
+
+#titleProfil{
+  margin-top: 6%;
+    text-align: center;
+}
+
+#secondTitleProfil{
+    text-align: center;
+}
