--- a/Design/profilepage/profilepage.css
+++ b/Design/profilepage/profilepage.css
@@ -27,6 +27,15 @@ a {
     margin-bottom: 4%;
 }
 
-#username{
-    
+#submit {
+    margin-top: 5%;
+    margin-left: 47.5%;
+}
+
+.form-group {
+   padding-top: 3%;
+}
+
+label {
+    margin-top: 0.5%;
 }
