--- a/neue pages/css/main.css
+++ b/neue pages/css/main.css
@@ -1,59 +1,77 @@
-header.masthead{
-    width: 100%;
-    height: 950px;
-    background-image: url("../images/Hintergrund1.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    margin-top: -20px;
+#vacationButtons{
+    margin-right: 5%;
+    width:10%;
+    float:right;
 }
 
-.navbar-brand:hover, .navbar-brand:visited {
-    color: black;
-    cursor: default;
+#deleteVacation{
+    margin-top: 50%;
 }
 
-.line {
-	font-size: 50px;
+p {
+    font-weight: bold;
 }
 
-#intro-text{
-	text-align: center;
-    font-size: 13pt;
-	position: relative;
-	top: 230px;	
+#highTemp, #lowTemp, #arrival, #departure, #cloudCover, #windSpeed, #precipitation{
+    display: inline;    
 }
 
-#demo{                  /*kann dann weg*/
-    text-align: center;
-	height: 700px;	
-    margin-top: 4%;
+#vacationData{
+    float:left;
+    margin-left: 20%;
+    font-size: 14pt;   
 }
 
-#demoButton {
-    margin-top: 5%;
-    background-color: transparent;
-    border-color: black;
+#temperature{
+    margin-left: 7%;  
+    float:left;
+    font-size:14pt;
 }
 
-#demoButton:hover {
-    background-color: white;
+#universalItem{
+    float:left; 
+    margin-left: 40%;
+    margin-bottom: 3.1%;
 }
 
-#frameElement {      /*kann dann weg*/
-    margin-left: 5%;
-    margin-bottom: 5%;
-    width: 90%;
-    height: 100%;
-    background-image: url("../images/Demo-Anzeige.png");
-    background-size: cover;
+#addItem{
+    float:right;
+    margin-right: 5%;
 }
 
-#demoElement {       /*kann dann weg*/
-    background-color: deeppink;
-    margin-left: 0.5%;
-    position: relative;
-    top: 135px;
-    width: 99%;
-    height: 80%;
+#cloudCoverImage, #windSpeedImage, #precipImage{
+    float:left;   
+}
+
+#cloudElements, #windSpeedElements, #precipElements {
+    float:left;
+    margin-top: 1%;
+    margin-left: 1.5%;
+}
+
+#precipTypes {
+    clear:both;
+    float:left;
+    margin-top: 2%;
+    margin-left: 1%;
+}
+
+#windSpeedImage, #precipImage{
+    margin-left:7%;
+}
+
+#hiddenElement{
+    display: none;   
+}
+
+#place{
+    margin-left: 1%;
+    margin-top: 1%;
+    font-size: 16pt;
+    float:left;
+}
+
+#weatherIcon{
+    float:left;
+    margin-left: 3%;
 }
